fixed alignment to viewport

--- a/style.css
+++ b/style.css
@@ -91,22 +91,16 @@ ul > li {
 @media (max-width: 960px) {
   /* For a screen < 960px, this CSS will be read */
   .container {
-    width: device-width;
+    width: 100vw;
     margin: 0 auto;
   }
-}
-@media (max-width: 720px) {
-  /* For a screen < 720px, this CSS will be read */
-  .container {
-    width: device-width;
-    margin: 0 auto;
+
+  h1 {
+    font-size: 20px;
   }
-}
-@media (max-width: 540px) {
-  /* For a screen < 540px, this CSS will be read */
-  .container {
-    width: device-width;
-    margin: 0 auto;
+
+  h2 {
+    font-size: 16px
   }
 }
 
